# DeepOperatorML

./: .gitignore  README.md  gen_data.py  main.py  preprocess_data.py  pyproject.toml  requirements.txt
configs/benchmarks/: paper_ready_benchmark.yaml
configs/problems/ground_vibration/: config_experiment.yaml  config_preprocessing.yaml  config_test.yaml  datagen.yaml
configs/problems/kelvin/: config_experiment.yaml  config_experiment_1000.yaml  config_experiment_operator.yaml  config_preprocessing_1000.yaml  config_preprocessing_operator.yaml  config_test.yaml  config_test_operator.yaml  datagen_1000.yaml  datagen_operator.yaml
configs/problems/lorentz63/: config_experiment.yaml
configs/problems/multilayer_horizontal_rocking/: config_experiment.yaml  config_preprocessing.yaml  config_preprocessing_paper_damping.yaml  config_test.yaml  datagen.yaml  datagen_paper_baseline.yaml  datagen_paper_damping.yaml
configs/problems/rajapakse_fixed_material/: config_experiment.yaml  config_test.yaml  datagen_paper_baseline.yaml
configs/problems/rajapakse_homogeneous/: config_experiment.yaml  config_preprocessing.yaml  config_test.yaml  datagen.yaml
configs/problems/vertical_layered_soil/: config_experiment.yaml  config_preprocessing.yaml  (+5 more)
configs/training/: config_don_train.yaml  config_don_train_stable.yaml  config_fno_train.yaml
scripts/benchmark/: aggregate_benchmark_reports.py  run_benchmark_pipeline.py
scripts/ground_vibration/: generate_external_dataset.py
src/modules/: __init__.py
src/problems/: __init__.py  datagen_plotting.py  plotting_compat.py
(+144 files in other folders)
