[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "deepoperatorml"
version = "0.1.0"
description = "Operator-learning pipelines for mechanics-inspired surrogate problems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geomloss==0.2.6",
    "matplotlib==3.7.0",
    "numpy==1.24.2",
    "PyYAML==6.0.2",
    "scipy==1.14.1",
    "torch==2.7.1",
    "tqdm==4.66.1",
    "wandb==0.25.1",
]

[tool.setuptools.packages.find]
include = ["src", "src.*"]
